--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,12 +1,27 @@
+:root {
+    --main-color: #5ea3d0;
+    --secondary-color: white;
+    --main-text-color: #3e5869;
+    --secondary-text-color: #b0c7d6;
+    --send-message-form: #F5F5F5;
+}
+
 * {
     box-sizing: border-box;
 }
 
 html, body {
-    max-width: 400px;
+    width: 400px;
+    height: 100%;
     margin: 0 auto;
-    font-size: 16px;
-    color: black;
+    padding: 0;
+    font-family: system-ui;
+    font-weight: 200;
+    color: 	var(--main-text-color); 
 }
+
+
+
+
 
 
